[*] correct z-index

--- a/src/components/app-input/styles/multiselect.module.scss
+++ b/src/components/app-input/styles/multiselect.module.scss
@@ -45,6 +45,8 @@
 		left: 12px;
 		bottom: 90%;
 		transform: none;
+
+		z-index: 3;
 	}
 
 	&:first-child :global .check-block__desc {
